--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "body-parser": "^1.20.2",
     "cloudinary": "^2.4.0",
     "colors": "^1.4.0",
+    "compress.js": "^2.1.2",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^7.1.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
@@ -32,6 +35,7 @@
     "passport-auth0": "^1.4.4",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "redis": "^4.7.0",
     "serverless-http": "^3.2.0",
     "uuid": "^10.0.0"
   }
