--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "compress.js": "^2.1.2",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "connect-redis": "^7.1.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
